--- a/quoteGenerator/index.html
+++ b/quoteGenerator/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/karsyzLogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Practice - Carousel</title>
+    <title>React Practice - Quote Generator</title>
   </head>
   <body>
     <div id="root" class=""></div>
